export interface Plant {
  id: string;
  name: string;
  speciesName?: string;
  imageUrl?: string;
}
