export interface Species {
  id: string;
  family: string;
  commonName: string;
  description: string;
  tags: string[];
  image: string;
}
