@startuml name ERD

' ============================
' ENTITIES
' ============================

skinparam class {
  BackgroundColor<<planned>> #DDDDDD
  BorderColor<<planned>> #999999
}

class User {
  +id: string
  +email: string
  +createdAt: Date
}

class Plant {
  +id: string
  +name: string
  +species: string
  +creationDate: Date
  +lastWateredDate: Date?
  +secondLastWateredDate: Date?
  +wateringFrequency: number?
  +inferredWateringFrequency: number?
  +nextWateringDate: Date?
  +trackWatering: boolean
  +imageUrl: string?
  +notes: string?
}

class Species {
  +id: string
  +commonName: string
  +scientificName: string
  +family: string?
  +description: string?
  +image: string?
  +tags: string[]?
  +otherNames: string[]?
  +type: string[]?
  +similarSpecies: string[]?
  +characteristics: object?
  +watering: object?
  +light: object?
  +humidity: object?
  +temperature: object?
  +soilAndRepotting: object?
  +fertilizing: object?
  +pestsAndProblems: object?
  +propagation: object?
}

class CareEntry {
  +id: string
  +careType: string
  +date: Date
  +notes: string?
  +otherCareType: string?
}

' ============================
' RELATIONSHIPS (CURRENT)
' ============================

User "1" --> "many" Plant : owns
Plant "1" --> "many" CareEntry : has

' ============================
' FUTURE RELATIONSHIPS (PLANNED)
' ============================

Plant ..> Species : planned\n(not implemented)

@enduml
